@@ -55,14 +55,14 @@ $config = Zend_Registry::get('config');
 	<script src="js/bootstrap-filestyle.js"></script>
 
 	<!-- load the dojo toolkit base -->
-	<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.8.2/dojo/dojo.js"
+	<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.8.3/dojo/dojo.js"
 		djConfig="parseOnLoad: false, async:true">
 	</script>
 
 
 
 	<style type="text/css">
-	    @import "http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dijit/themes/claro/claro.css";
+	    @import "http://ajax.googleapis.com/ajax/libs/dojo/1.8.3/dijit/themes/claro/claro.css";
 	</style>
     </head>
 
