@@ -1,0 +1,66 @@
+<!-- -->
+<script>
+    var permissionStore_<?= $this->name ?> = <?= json_encode($this->permissions) ?>;
+    //alert(permissionStore_<?= $this->name ?>['U_1']['permissions']['new']);
+</script>
+
+<!-- main permission panel -->
+<div class="permission-panel">
+    <button class="btn" data-toggle="modal" href="#permissionPanelRoles_<?= $this->name ?>">add Role</button>
+    <button class="btn">remove selected Role</button>
+    <div class="row-fluid">
+	<div class="span6">
+	    <h5>Gruppen- order Benutzernamen:</h5>
+	    <div class="permission-panel-roles">
+		<ul>
+		    <?php foreach ($this->permissions as $key => $value) { ?>
+    		    <li><a href="javascript:;"><?= $value['name'] ?></a></li>
+		    <?php } ?>
+		    <!-- <li><a class="active" href="javascript:;">test1</a></li> -->
+		</ul>
+	    </div>
+	</div>
+
+	<div class="span6">
+	    <h5>Berechtigungen:</h5>
+	    <div class="permission-panel-rights well well-small">
+		<?php
+		foreach ($this->actions as $value) {
+		    ?>
+    		<div class="action">
+    		    <span class="action-name"><?= $value ?>:</span>
+    		    <div class="btn-group" data-toggle="buttons-radio">
+    			<button type="button" class="btn btn-small btn-success">allow</button>
+    			<button type="button" class="btn btn-small btn-danger">deny</button>
+    		    </div>
+    		</div>
+		<?php } ?>
+	    </div>
+	</div>
+    </div>
+    <div class="row-fluid">
+	<div class="pull-right">
+	    <button class="btn btn-primary">save</button>
+	</div>
+    </div>
+</div>
+
+<!-- modal box with available roles -->
+<div id="permissionPanelRoles_<?= $this->name ?>" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="permissionPanelRoles_<?= $this->name ?>_Label" aria-hidden="true">
+	<div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	    <h3 id="">Roles</h3>
+	</div>
+	<div class="modal-body">
+	    <h5>Select roles to add:</h5>
+	    <select multiple="multiple">
+		<?php foreach($this->roles as $key => $value) { ?>
+		<option value="<?= $key ?>"><?= $value ?></option>
+		<?php } ?>
+	    </select>
+	</div>
+	<div class="modal-footer">
+	    <button class="btn btn-primary" type="submit">Add</button>
+	    <button class="btn" data-dismiss="modal">Cancel</button>
+	</div>
+</div>
